# Xmarkdown

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-release.cjs  finalize-packages.sh  generate_ico.py  sync-version.js
src/: App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: xmarkdown.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  Toolbar.tsx
src/components/editor/: MarkdownEditor.tsx  markdown-keymap.ts
src/components/preview/: MarkdownPreview.tsx  MermaidBlock.tsx
src/hooks/: useAutoSave.ts  useFileDrop.ts  useFileOperations.ts  useKeyboardShortcuts.ts  useMenuEvents.ts
src/i18n/: index.ts
src/store/: editor-store.ts  file-store.ts  settings-store.ts
